--- a/글로벌투어스/index.html
+++ b/글로벌투어스/index.html
@@ -20,7 +20,7 @@
                   <a href="#">홈</a>
                   <ul class="sub">
                     <li><a href="#">회사소개</a></li>
-                    <li><a href="#">CEO인사말</a></li>
+                    <li><a href="#">인사말</a></li>
                     <li><a href="#">회사비전</a></li>
                     <li><a href="#">오시는길</a></li>
                   </ul>
