--- a/글로벌투어스/index.html
+++ b/글로벌투어스/index.html
@@ -6,7 +6,7 @@
     <title>글로벌투어스</title>
     <link href="css/style.css" rel="stylesheet" />
     <script src="js/jquery-1.12.3.js"></script>
-    <scrpit src="js/script.js"> </scrpit>
+    <script src="js/script.js"></script>
   </head>
   <body>
     <div class="wrap">
@@ -20,7 +20,7 @@
                   <a href="#">홈</a>
                   <ul class="sub">
                     <li><a href="#">회사소개</a></li>
-                    <li><a href="#">인사말</a></li>
+                    <li><a href="#">CEO인사말</a></li>
                     <li><a href="#">회사비전</a></li>
                     <li><a href="#">오시는길</a></li>
                   </ul>
@@ -55,12 +55,29 @@
             </nav>
           </h1>
         </header>
-        <section class="slide">슬라이드영역</section>
+        <section class="slide">
+          <ul>
+            <li class="s1">
+              <a href="#">
+                <h2><span>글로벌투어스</span>슬라이드1</h2>
+              </a>
+            </li>
+            <li class="s2">
+              <a href="#">
+                <h2><span>글로벌투어스</span>슬라이드2</h2>
+              </a>
+            </li>
+            <li class="s3">
+              <a href="#">
+                <h2><span>글로벌투어스</span>슬라이드3</h2>
+              </a>
+            </li>
+          </ul>
+        </section>
         <div class="contents">
           <article class="notice">공지사항</article>
           <article class="gall">갤러리</article>
           <article class="go">바로가기</article>
-          <article class="notice"></article>
         </div>
         <footer>푸터영역</footer>
       </div>
